edit user image and displayname. reset password using email link.
